fix textarea overflow and other bugs

--- a/public/css/responder_profile.css
+++ b/public/css/responder_profile.css
@@ -6,6 +6,11 @@
     box-sizing: border-box;
 }
 
+textarea {
+    width: 100%;
+    height: 100%;
+}
+
 /* background image for the body */
 body {
     overflow-x: hidden;
